--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -15,13 +15,14 @@ Modular\Types\SocialMembershipType:
   extensions:
     - Modular\Extensions\Acting
 
-# models and their controllers
+# models
 Modular\Models\SocialModel:
   extensions:
     - Modular\Extensions\Acting
     - Modular\UI\Controls\SocialActionButtons
     - Modular\Extensions\Model\Historical
 
+# types
 Modular\Types\SocialType:
   extensions:
     - Modular\Extensions\Model\Historical
@@ -42,65 +43,79 @@ Modular\Types\SocialOrganisationProductAndServiceType:
   extensions:
     - Modular\Actions\Approveable
 
-
-Modular\Controllers\SocialModel_Controller:
+Modular\Types\SocialAction:
   extensions:
-    - Modular\Extensions\Acting
-    - Modular\UI\Controls\SocialActionLinks
-    - Modular\UI\Controls\SocialModalProvider
-    - Modular\Extensions\Controller\SocialController
-    - Modular\Actions\CreateableExtension
-    - Modular\Actions\ListableExtension
-    - Modular\Actions\ViewableExtension
-    - Modular\Actions\EditableExtension
+    - Modular\Extensions\Model\Historical
 
+# edges
 Modular\Edges\Social:
   extensions:
     - Modular\Extensions\Model\SocialModel
     - Modular\Extensions\Model\Historical
 
-Modular\Types\SocialAction:
+# controllers
+Modular\Controllers\SocialModel_Controller:
   extensions:
-    - Modular\Extensions\Model\Historical
+    - Modular\Extensions\Acting
+    - Modular\UI\Controls\SocialActionLinks
+    - Modular\UI\Dialogs\SocialModalProvider
+    - Modular\Extensions\Controller\SocialController
+    - Modular\Actions\Createable
+    - Modular\Actions\Listable
+    - Modular\Actions\Viewable
+    - Modular\Actions\Editable
+
+Modular\Controllers\SocialMember_Controller:
+  extensions:
+    - Modular\Actions\Uploadable
+    - Modular\Actions\ViewableSubContent
+    - Modular\Actions\Followable
+    - Modular\Actions\Likeable
+    - Modular\Actions\Preference
+    - Modular\Actions\Searchable
+    - Modular\Actions\NewsFeed
+    - Modular\Actions\Registerable
+    - Modular\Actions\Postable
+    - Modular\Actions\Confirmable
 
 Modular\Controllers\SocialOrganisation_Controller:
   extensions:
-    - HasImagesExtension
-    - HasCoverImageExtension
-    - HasLogoExtension
-    - HasGalleryExtension
-    - HasContactInfoExtension
-    - HasOrganisationCategoriesExtension
+    - HasImages
+    - HasCoverImage
+    - HasLogo
+    - HasGallery
+    - HasContactInfo
+    - HasOrganisationCategories
 
 Modular\Controllers\SocialPost_Controller:
   extensions:
-    - HasImagesExtension
+    - HasImages
 
 
 # Forum:
 #  extensions:
-#    - FollowableExtension
+#    - Followable
 
 # Forum_:
 #  extensions:
-#    - FollowableExtension
-#    - ListableExtension
-#    - LikeableExtension
+#    - Followable
+#    - Listable
+#    - Likeable
 #
 # Member:
 #  extensions:
 #    - \Modular\Actions\Approveable
-#    - ConfirmableExtension
+#    - Confirmable
 #
 # Member_:
 #  extensions:
-#    - UploadableExtension
-#    - ViewableSubContentExtension
-#    - FollowableExtension
-#    - LikeableExtension
-#    - PreferenceExtension
-#    - SearchableExtension
-#    - NewsFeedExtension
-#    - RegisterableExtension
-#    - PostableExtension
-#    - ConfirmableExtension
+#    - Uploadable
+#    - ViewableSubContent
+#    - Followable
+#    - Likeable
+#    - Preference
+#    - Searchable
+#    - NewsFeed
+#    - Registerable
+#    - Postable
+#    - Confirmable
