--- a/_config/graph.yml
+++ b/_config/graph.yml
@@ -5,12 +5,7 @@ Name: modular-social-graph-config
 # field and class names are picked up e.g. 'FromNode' and 'ToNode' instead of 'NodeA' and 'NodeB'
 Modular\Edges\Directed:
   extensions:
-    - Modular\Extensions\Model\Edge
-  from_class_name: 'Modular\Models\SocialModel'
-  to_class_name: 'Modular\Models\SocialModel'
-  from_field_name: 'FromModel'
-  to_field_name: 'ToModel'
-
+    - Modular\Extensions\Model\Graph\Edge
 
 # now add Node extension to the Models
 Member:
