--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -71,7 +71,7 @@ Modular\Controllers\SocialModel_Controller:
     - Modular\UI\Controls\SocialActionLinks
     - Modular\UI\Dialogs\SocialModalProvider
     - Modular\Extensions\Controller\SocialController
-    - Modular\Extensions\Controller\SocialModelController     # dynamically add url_handlers
+    - Modular\Extensions\Controller\SocialModel     # dynamically add url_handlers
     - Modular\Actions\Createable
     - Modular\Actions\Listable
     - Modular\Actions\Viewable
