--- a/_config/graph.yml
+++ b/_config/graph.yml
@@ -5,9 +5,9 @@ Name: modular-social-graph-config
 # field and class names are picked up e.g. 'FromNode' and 'ToNode' instead of 'NodeA' and 'NodeB'
 Modular\Edges\Directed:
   extensions:
-    - Modular\Extensions\Model\Graph\Edge
+    - Modular\Extensions\Model\GraphEdge
 
 # now add Node extension to the Models
 Member:
   extensions:
-    - Modular\Extensions\Model\Graph\Node
+    - Modular\Extensions\Model\GraphNode
